# VisualData

./: Anna.cpp  Anna.hpp  CMakeLists.txt  Main.cpp  VisualData.cpp  VisualData.h
src/: Algos.hpp  Anna.cpp  Anna.hpp  ConsoleLocaleFix.hpp  Main.cpp
src/BasicTuiLibrary/: Tui.cpp  Tui.hpp
src/TextGuiLibrary/: Gui.hpp
